--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "*.{jsx,js}": "eslint --fix",
-  "*.{css,less,scss,html,json,jsx,js,md}": "prettier --write"
+  "*.{tsx,ts}": "eslint --fix",
+  "*.{css,less,scss,html,json,tsx,ts,md}": "prettier --write"
 }
